--- a/idex.html
+++ b/idex.html
@@ -7,5 +7,7 @@
 </head>
 <body>
    <h1>why we the people is selfish</h1> 
+    <p>we the people is selfish because we are not ready to help others</p>
+   <li> book </li>
 </body>
 </html>
